# Autonomous-Car-with-ROS

./: README.md
devel/include/deep_learning/: Burak.h  burakConfig.h
devel/lib/pkgconfig/: deep_learning.pc  joy_node_multiple.pc  racecar.pc  racecar_control.pc  racecar_description.pc  racecar_gazebo.pc  rplidar_ros.pc
devel/lib/racecar_potential_field_controller/: node
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/sparkfun_9dof_razor_imu_m0/: driver_node
devel/lib/sweep_ros/: sweep_node  sweep_node_minified
devel/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
devel/lib/vesc_driver/: vesc_driver_node
devel/share/deep_learning/cmake/: deep_learning-msg-extras.cmake  deep_learning-msg-paths.cmake  deep_learningConfig.cmake
devel/share/deep_learning/docs/: burakConfig-usage.dox  burakConfig.dox  burakConfig.wikidoc
devel/share/joy_node_multiple/cmake/: joy_node_multipleConfig.cmake
devel/share/racecar/cmake/: racecarConfig.cmake
devel/share/racecar_control/cmake/: racecar_controlConfig.cmake
devel/share/racecar_description/cmake/: racecar_descriptionConfig.cmake
src/: .rosinstall  .rosinstall.bak
src/joy_node_multiple/: CMakeLists.txt
src/joy_node_multiple/launch/: joy_node_multiple.launch
src/joy_node_multiple/scripts/: joy_node.py
src/racecar-controllers/deep_learning/: CMakeLists.txt
src/racecar/sweep-ros/: CMakeLists.txt
src/racecar/sweep-ros/launch/: sweep.launch  sweep2scan.launch  sweep_minified.launch
src/racecar/sweep-ros/src/: node_minified.cpp
(+35 files in other folders)
